--- a/HairSalon/Views/Stylists/Create.cshtml
+++ b/HairSalon/Views/Stylists/Create.cshtml
@@ -14,4 +14,4 @@
     @Html.TextBoxFor(model => model.StylistSpeciality)
     <input type="submit" value="Add new stylist!" />
 }
-<p>@Html.ActionLink("Show all cuisines", "Index")</p>
+<p>@Html.ActionLink("Show all stylists", "Index")</p>
