add clients view

--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -8,6 +8,7 @@
 <h2>Stylist Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.StylistName): @Html.DisplayFor(model => model.StylistName)</h3>
+<h3>@Html.DisplayNameFor(model => model.StylistSpeciality): @Html.DisplayFor(model => model.StylistSpeciality)</h3>
 
 <ul>
 @if (@Model.Clients.Count == 0)
