--- a/HairSalon/Views/Clients/Create.cshtml
+++ b/HairSalon/Views/Clients/Create.cshtml
@@ -11,8 +11,8 @@
     @Html.LabelFor(model => model.ClientName)
     @Html.TextBoxFor(model => model.ClientName)
 
-    @Html.LabelFor(model => model.ClientName)
-    @* @Html.DropDownList("StylistId") *@
+    @Html.LabelFor(model => model.StylistId)
+    @Html.DropDownList("StylistId")
 
     <input type="submit" value="Add new client" class="btn btn-dark" />
 }
