--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -14,7 +14,7 @@
 
 @foreach (Client client in Model)
 {
-  <li>@Html.ActionLink($"{client.ClientName}", "Details", new { id = client.ClientId })</li>
+  <li>@Html.ActionLink($"{client.ClientName}", "Details", new { id = client.ClientId }) | @client.ClientName</li>
 }
 
 <p>@Html.ActionLink("Add new client", "Create")</p>
